Can't horizontally resize windows with CSD if title is moved off screen
Affected version
- Debian Sid/Unstable
- Mutter version: 3.36.1
- Wayland Session. However, mutter-decorated windows respond to "xwininfo"
Bug summary
Unable to resize windows with CSD when titlebar is hidden off the screen
Steps to reproduce
- Open any application with CSD
- Move window to the top using window action key, so decoration is outside the screen
- Try to resize window horizontally
What happened
Window shrinks by itself and I can't resize it until move CSD to screen
What did you expect to happen
Window resized